# kal-shlib-core

./: .gitignore  .package  COPYING  README  README.rst  autogen.sh  configure.ac
pkg/: author  licence  pkginfo
pkg/deb/: debinfo  kalinfo
src/: Makefile.am
src/etc/: Makefile.am  shlib.sources
test/: _convert_fn_names  _lookup_fun  bash-shlib  from  include  init  shld  shlib  test
